// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskList Snapshots matches snapshot with default props 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "minHeight": 200,
      "padding": 32,
    }
  }
  testID="task-list-empty"
>
  <Text
    style={
      {
        "color": "#747d8c",
        "fontSize": 16,
        "marginTop": 16,
        "textAlign": "center",
      }
    }
  >
    No tasks yet. Create one!
  </Text>
</View>
`;

exports[`TaskList Snapshots matches snapshot with error state 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "minHeight": 200,
      "padding": 32,
    }
  }
  testID="task-list-empty-error"
>
  <Text
    style={
      {
        "color": "#e74c3c",
        "fontSize": 14,
        "marginBottom": 8,
        "textAlign": "center",
      }
    }
  >
    Failed to load tasks
  </Text>
  <Text
    style={
      {
        "color": "#747d8c",
        "fontSize": 16,
        "marginTop": 16,
        "textAlign": "center",
      }
    }
  >
    Pull to refresh
  </Text>
</View>
`;

exports[`TaskList Snapshots matches snapshot with loading state 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "minHeight": 200,
      "padding": 32,
    }
  }
  testID="task-list-empty-loading"
>
  <ActivityIndicator
    color="#3498db"
    size="large"
  />
  <Text
    style={
      {
        "color": "#747d8c",
        "fontSize": 16,
        "marginTop": 16,
        "textAlign": "center",
      }
    }
  >
    Loading tasks...
  </Text>
</View>
`;

exports[`TaskList Snapshots matches snapshot with sync indicator 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "minHeight": 200,
      "padding": 32,
    }
  }
  testID="task-list-empty"
>
  <Text
    style={
      {
        "color": "#747d8c",
        "fontSize": 16,
        "marginTop": 16,
        "textAlign": "center",
      }
    }
  >
    No tasks yet. Create one!
  </Text>
</View>
`;
